New Project added for Exception Handler

--- a/pom.xml
+++ b/pom.xml
@@ -22,5 +22,6 @@
 		<module>YAMLParser</module>
 		<module>CallerService</module>
 		<module>CalledService</module>
+		<module>ExceptionHandler</module>
 	</modules>
 </project>
