Couple of new projects

--- a/pom.xml
+++ b/pom.xml
@@ -23,5 +23,7 @@
 		<module>CallerService</module>
 		<module>CalledService</module>
 		<module>ExceptionHandler</module>
+		<module>SpringSecurityDemo</module>
+		<module>SpringDataPostgress</module>
 	</modules>
 </project>
